# json-vs-grpc-benchmark

./: .gitignore  README.md  package.json
bench/: benchmark.ts
docs/: report.md  walkthrough.md
go-app/: go.mod  main.go
go-app/user/: user.pb.go  user_grpc.pb.go
kotlin-app/: build.gradle.kts
kotlin-app/src/main/kotlin/com/example/demo/: MockData.kt  UserController.kt  UserGrpcService.kt
kotlin-app/src/main/resources/: application.yml
proto/: user.proto
python-app/: README.md  app.py  pyproject.toml  user_pb2.py  user_pb2_grpc.py
scripts/: auto_bench.ps1  gen-cert.ts
src/: grpc-client.ts  grpc-server.ts  json-server.ts  node-servers.ts
src/data/: mock-data.ts
